force-app/main/default/objects/Purchase_Order__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Business_Unit_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>