force-app/main/default/objects/Purchase_Order__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <description>Actual received date for this purchase order.</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>