force-app/main/default/objects/Purchase_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who is requesting this purchase order.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Requested_By_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>