force-app/main/default/objects/Purchase_Order__c/fields/Ship_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location__c</fullName>
    <description>Location to which this order will be shipped.</description>
    <label>Ship To Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders_For_Location</relationshipName>
    <type>Lookup</type>
</CustomField>