force-app/main/default/objects/Purchase_Order__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>Subtotal__c * Ship_To_Location__r.Sales_Tax_Rate__c</formula>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>