force-app/main/default/objects/Purchase_Order__c/fields/Tax_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this order will have taxes charged or if they will be a liability.</description>
    <label>Tax Deferred</label>
    <type>Checkbox</type>
</CustomField>