force-app/main/default/objects/Purchase_Order__c/fields/Tax_Liability__c.field-meta.xml
<CustomField>
    <fullName>Tax_Liability__c</fullName>
    <formula>IF(
                Tax_Deferred__c,
                Subtotal__c * Ship_To_Location__r.Use_Tax_Rate__c,
                0
            )</formula>
    <label>Tax Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>