force-app/main/default/objects/Purchase_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Subtotal__c
+ Shipping_Amount__c
+ Other_Charges__c
+ IF(Tax_Deferred__c, 0, Tax_Amount__c)</formula>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>