force-app/main/default/objects/Purchase_Order__c/fields/Total_Internal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Quantity__c</fullName>
    <label>Total Internal Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>