force-app/main/default/objects/Purchase_Order__c/fields/Vendor_Reference__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Reference__c</fullName>
    <description>Vendor reference number for this order (e.g. confirmation number).</description>
    <label>Vendor Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>